Add latest releases

--- a/_posts/2019-12-01-0.1.4.md
+++ b/_posts/2019-12-01-0.1.4.md
@@ -7,10 +7,12 @@ categories: release
 
 Improvements targeted at improving the sign up and sign in UX.
 
-New features:
+**New features:**
+
 - Forgot Password button
 - Email Verification for new accounts
 
-Bug fixes:
+**Bug fixes:** 
+
 - Keyboard's "next" and "done" buttons implemented
 - Missing and broken form validation fixed
